# left_brain_right_brain

./: .gitignore  README.md  Test_Query.http  app.py  docker-compose.yaml  pyproject.toml
__test__/: test_args.py
doc/: LLM.md
src/: agent.py  args.py  database.py  llama_index.py  model.py  pdf.py  server.py
